# chatbot-backend

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
chatbot_backend/: ai_logic.py  config.py  main.py
chatbot_backend/api/: __init__.py  deps.py
chatbot_backend/api/endpoints/: chat.py  constants.py
chatbot_backend/crud/: __init__.py  conversation.py  message.py
chatbot_backend/db/: mongodb.py
chatbot_backend/models/: __init__.py  conversation.py  message.py  version.py
chatbot_backend/schema/: __init__.py  conversation.py  message.py  version.py
