[tool.poetry]
name = "chatbot-backend"
version = "0.1.0"
description = ""
authors = ["akshatj2209 <akshatj2209@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn chatbot_backend.main:app --reload"